[package]
name = "one-night-ultimate-werewolf"
version = "0.1.0"
authors = ["Ruchir Khaitan <ruchir0001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
chrono = "0.4.11"
futures = "0.3.4"
futures-channel = "0.3.1"
rand = "0.7.3"
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", features = ["cmake-build"] }
structopt = "0.3.11"
thiserror = "1.0.11"
tokio = { version = "0.2.13", features = ["full"] }
tokio-postgres = "0.5.1"
