[package]
name = "one-night-ultimate-werewolf"
version = "0.1.0"
authors = ["Ruchir Khaitan <ruchir0001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avro-rs = "0.7.0"
byteorder = "1.3"
bytes = "0.5.4"
chrono = "0.4.11"
failure = "0.1.7"
futures = "0.3.4"
futures-channel = "0.3.1"
rand = "0.7.3"
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", features = ["cmake-build"] }
serde_json = "1.0.48"
structopt = "0.3.11"
thiserror = "1.0.11"
tokio = { version = "0.2.13", features = ["full"] }
tokio-postgres = "0.5.1"
